force-app/main/default/objects/BusinessTripStrategy__c/BusinessTripStrategy__c.object-meta.xml
<CustomObject>
    <label>Business Trip Strategy</label>
    <nameField>
        <displayFormat>BTS-{000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Trip Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>