force-app/main/default/objects/BusinessTripStrategy__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
                <label>Alto</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <label>Medio</label>
            </value>
            <value>
                <fullName>LOW</fullName>
                <label>Bajo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>